tests/snapshots/test_typeinferer__tests__typeinferer-6.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer6.pl\", error_manager.clone())"
---
func main() -> Unit {
    let small = [1: Int64]: Int64[1]
    let small2: Int64[1] = small: Int64[1]
}
func foo() -> Unit {
    let small = [1: Int64]: Int64[1]
    let small2 = small: Int64[1]
}
