tests/snapshots/test_typeinferer__tests__typeinferer-7.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer7.pl\", error_manager.clone())"
---
pure func square(x: Int64) -> Int64 {
    return (x: Int64 * x: Int64): Int64
}
pure func add(x: Int64, y: Int64) -> Int64 {
    return (x: Int64 + y: Int64): Int64
}
func main() -> Unit {
    let x = 1: Int64
    let y = 2: Int64
    let z = (x: Int64 + y: Int64): Int64
    return
}
