tests/snapshots/test_typeinferer__tests__typeinferer-8.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer8.pl\", error_manager.clone())"
---
error[E0000]: tests/data/infer8.pl:1:6: Function `does_not_return` does not return from all paths
   1 │  func does_not_return() -> Int {
   2 │
