tests/snapshots/test_typeinferer__tests__typeinferer.snap
---
source: tests/test_typeinferer.rs
expression: "typeinferer_output(\"tests/data/infer1.pl\", error_manager.clone())"
---
error[E0009]: tests/data/infer1.pl:2:25: Unbound function or variable `a`
   1 │  func main() {
   2 │      let arr: Int[64] = [a, b, ...]
   3 │  }
